# mango

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  projects.mgo  pyproject.toml  with_mango.py  with_mango_easy.py  without_mango.py
.claude/skills/mangoframe/: SKILL.md
.github/workflows/: ci.yml
docs/: GUIDE.md  PROJECT_STRUCTURE.md
examples/: main.py
examples/hello_module/: module.py
mango/: __init__.py  app.py  auth.py  cli.py  crud.py  db.py  errors.py  exceptions.py  migrations.py  module.py  pagination.py  plugins.py  project.py  repository.py  schema.py  security.py  tasks.py  web.py
tests/: test_app_wrapper.py  test_auth.py  test_cli.py  test_crud.py  test_crud_paginated.py  test_errors.py  test_module_registry.py  test_pagination.py  test_project_scaffold.py  test_repository.py  test_repository_composite_pk.py  test_repository_extras.py  test_security_and_plugins.py  test_tasks_and_migrations.py
